add recent publications

--- a/index.html
+++ b/index.html
@@ -118,6 +118,19 @@
                 <tr>
                     <td  class="col-md-4">
                         <div style="font-size:1.5em;"> 
+                           March 2019 
+                        </div>
+                    </td>
+                    <td class="col-md-7">
+                        <div style="font-size:1.5em;">
+                            Our paper on acoustic non-line-of-sight imaging was accepted as an oral to CVPR!
+                        </div>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td  class="col-md-4">
+                        <div style="font-size:1.5em;"> 
                            June 2018 
                         </div>
                     </td>
@@ -210,8 +223,8 @@
                         <div style='font-size:1.5em'>
                             <strong> Stanford University</strong>, Ph.D. Student <br />
                             <i>Advisor:</i> Gordon Wetzstein <br />
-                            <i>Area:</i> Computational Imaging, single photon detectors, virtual reality <br />
-                            <i>Project:</i> Reconstruction of transient images, non-line of sight imaging, virtual reality rendering
+                            <i>Area:</i> Computational Imaging, single photon detectors <br />
+                            <i>Project:</i> 3D imaging, non-line of sight imaging
                         </div>
                     </td>
                 </tr>
@@ -253,6 +266,42 @@
             <h1 id="publications">Publications</h1>
             <div class="row">
             <table class="table table-hover">
+
+                <tr>
+                    <td class="col-md-3"><a href="http://www.computationalimaging.org/publications/acoustic-non-line-of-sight-imaging/" target="_blank"><img width=300 src="im/cvpr19.png"/></a> </td>
+                    <td class="col-md-7 col-md-offset-0">
+                        <div style='font-size:1.5em'>
+                            <strong>D. B. Lindell</strong>, G. Wetzstein, Vladlen Koltun, “Acoustic Non-Line-of-Sight Imaging”, <i>Proc. CVPR</i>, 2019.
+                        </div>
+                        <div style='font-size:1.5em'>
+                            <a style="cursor: pointer;" class='flip' onclick="$(this).next('.panel').slideToggle();"> [Abstract]</a>
+                            <a style="cursor: pointer;" href="http://www.computationalimaging.org/publications/acoustic-non-line-of-sight-imaging"> [Webpage]</a>
+                            <a style="cursor: pointer;" href="https://drive.google.com/a/stanford.edu/file/d/1nYyMLNU6XMIXkzqwxt3jEDoOap4gk_IX/view?usp=sharing"> [PDF]</a>
+                            <a style="cursor: pointer;" href="https://drive.google.com/a/stanford.edu/file/d/1rkeGQwmYRgYfS_U_RcR3iPmF3tIw8LMB/view?usp=sharing"> [Supplement]</a>
+                            <a style="cursor: pointer;" href="https://www.youtube.com/watch?v=dTsTw3rGhyI"> [Video]</a>
+                        </div>
+                        <div class="panel" style="display:none; font-size:18px; text-align: justify;">
+                            <p>Non-line-of-sight (NLOS) imaging enables unprecedented capabilities in a wide range of applications, including robotic and machine vision, remote sensing, autonomous vehicle navigation, and medical imaging. Recent approaches to solving this challenging problem employ optical time-of-flight imaging systems with highly sensitive time-resolved photodetectors and ultra-fast pulsed lasers. However, despite recent successes in NLOS imaging using these systems, widespread implementation and adoption of the technology remains a challenge because of the requirement for specialized, expensive hardware. We introduce acoustic NLOS imaging, which is orders of magnitude less expensive than most optical systems and captures hidden 3D geometry at longer ranges with shorter acquisition times compared to state-of-the-art optical methods. Inspired by hardware setups used in radar and algorithmic approaches to model and invert wave-based image formation models developed in the seismic imaging community, we demonstrate a new approach to seeing around corners.</p>
+                        </div>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="col-md-3"><a href="" target="_blank"><img width=300 src="im/scientificreports2018.png"/></a> </td>
+                    <td class="col-md-7 col-md-offset-0">
+                        <div style='font-size:1.5em'>
+                            F. Heide, S. Diamond, <strong>D. B. Lindell</strong>, G. Wetzstein, “Sub-picosecond photon-efficient 3D imaging using single-photon sensors”, <i>Scientific Reports</i>, 2018.
+                        </div>
+                        <div style='font-size:1.5em'>
+                            <a style="cursor: pointer;" class='flip' onclick="$(this).next('.panel').slideToggle();"> [Abstract]</a>
+                            <a style="cursor: pointer;" href="https://www.nature.com/articles/s41598-018-35212-x"> [Webpage]</a>
+                        </div>
+                        <div class="panel" style="display:none; font-size:18px; text-align: justify;">
+                            <p>Active 3D imaging systems have broad applications across disciplines, including biological imaging, remote sensing and robotics. Applications in these domains require fast acquisition times, high timing accuracy, and high detection sensitivity. Single-photon avalanche diodes (SPADs) have emerged as one of the most promising detector technologies to achieve all of these requirements. However, these detectors are plagued by measurement distortions known as pileup, which fundamentally limit their precision. In this work, we develop a probabilistic image formation model that accurately models pileup. We devise inverse methods to efficiently and robustly estimate scene depth and reflectance from recorded photon counts using the proposed model along with statistical priors. With this algorithm, we not only demonstrate improvements to timing accuracy by more than an order of magnitude compared to the state-of-the-art, but our approach is also the first to facilitate sub-picosecond-accurate, photon-efficient 3D imaging in practical scenarios where widely-varying photon counts are observed.</p>
+                        </div>
+                    </td>
+                </tr>
+
 
                 <tr>
                     <td class="col-md-3"><a href="http://www.computationalimaging.org/publications/single-photon-3d-imaging-with-deep-sensor-fusion/" target="_blank"><img width=300 src="im/siggraph_2018.jpg"/></a> </td>
