update cv, work

--- a/index.html
+++ b/index.html
@@ -509,6 +509,30 @@ Satelliteborne C-band scatterometer measurements of the radar backscatter coeffi
                 <tr>
                     <td class="col-md-1"> 
                         <div style='font-size:1.5em'>
+                            <a href="http://intel.com"> 
+                                <img src="im/intel.png"
+                                  width="200" style="border-radius: 0px; margin: 10px; max-width: none; margin-left: 0px; margin-top: 10px"
+                                  alt="Intel"/>
+                            </a> 
+                        </div>
+                    </td>
+                    <td  class="col-md-4">
+                        <div style="font-size:1.5em; margin-top: 30px;"> 
+                            June 2018-Oct 2018<br />
+                            Santa Clara, CA
+                        </div>
+                    </td>
+                    <td class="col-md-7">
+                        <div style='font-size:1.5em'>
+                            <strong>Intel Intelligent Systems Lab</strong> <br />
+                            <i>Position</i>: Intern <br />
+                            <i>Project</i>: Developed hardware system and algorithms for non-line-of-sight imaging using acoustics.
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-1"> 
+                        <div style='font-size:1.5em'>
                             <a href="http://softwareforhire.com"> 
                                 <img src="im/sfh.jpg"
                                   width="200" style="border-radius: 0px; margin: 10px; max-width: none; margin-left: 0px; margin-top: 35px"
@@ -518,7 +542,7 @@ Satelliteborne C-band scatterometer measurements of the radar backscatter coeffi
                     </td>
                     <td  class="col-md-4">
                         <div style="font-size:1.5em; margin-top: 30px;"> 
-                            March 2016-August-2016<br />
+                            March 2016-August 2016<br />
                             Mankato, MN (remote)
                         </div>
                     </td>
@@ -542,7 +566,7 @@ Satelliteborne C-band scatterometer measurements of the radar backscatter coeffi
                     </td>
                     <td  class="col-md-4">
                         <div style="font-size:1.5em; margin-top: 30px;"> 
-                            June 2016-July-2016<br />
+                            June 2016-July 2016<br />
                             Tucson, AZ
                         </div>
                     </td>
@@ -550,7 +574,7 @@ Satelliteborne C-band scatterometer measurements of the radar backscatter coeffi
                         <div style='font-size:1.5em'>
                             <strong>Rincon Research Corporation </strong> <br />
                             <i>Position</i>: Electrical Engineering Intern <br />
-                            <i>Project</i>: Developed a cloud-based digital video recording system to stream and record live video. Integrated live broadcast television demodulation capability using <a href="http://gnuradio.org/">GNU Radio</a> and Rincon Research Corporation signal processing hardware.
+                            <i>Project</i>: Developed a cloud-based digital video recording system to stream and record live video. Integrated live broadcast television demodulation capability using <a href="http://gnuradio.org/">GNU Radio</a> and proprietary signal processing hardware.
                         </div>
                     </td>
                 </tr>
