--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 <div class="pubwrap">
                     <img width=300px src="im/soil.png"/>
                     <div><h3> High-Resolution Soil Moisture Retrieval with ASCAT</h3></div>
-                    <div><h3 class="unbold"> IEEE Geoscience and Remote Sensing Letters</h3></div>
+                    <div><h3 class="unbold"> IEEE Geoscience and Remote Sensing Letters 2016</h3></div>
                     <h4>Citation</h4>
                     <p style='font-size:1.0em'>
                          <strong>D. B. Lindell</strong>, D. Long, “High-resolution soil moisture retrieval with ASCAT”, <i>Geoscience and Remote Sensing Letters</i>, 13 (7), 972-976, 2016.
@@ -473,7 +473,7 @@
                 <div class="pubwrap">
                     <img width=300px src="im/ascat.png">
                     <div><h3> Multiyear Arctic Ice Classification Using ASCAT and SSMIS</h3></div>
-                    <div><h3 class="unbold"> Remote Sensing</h3></div>
+                    <div><h3 class="unbold"> Remote Sensing 2016</h3></div>
                     <h4>Citation</h4>
                     <p style='font-size:1.0em'>
                          <strong>D. B. Lindell</strong>, D. Long, “Multiyear Arctic Ice Classification Using ASCAT and SSMIS”, <i>Remote Sensing</i>, 8 (4), 294, 2016.
@@ -492,7 +492,7 @@
                 <div class="pubwrap">
                     <img width=300px src="im/oscat.png"/>
                     <div><h3> Multiyear Arctic Ice Classification Using OSCAT and QuikSCAT</h3></div>
-                    <div><h3 class="unbold"> IEEE Transactions on Geoscience and Remote Sensing </h3></div>
+                    <div><h3 class="unbold"> IEEE Transactions on Geoscience and Remote Sensing 2016</h3></div>
                     <h4>Citation</h4>
                     <p style='font-size:1.0em'>
                          <strong>D. B. Lindell</strong>, D. Long, “Multiyear Arctic Ice Classification Using OSCAT and QuikSCAT”, <i>IEEE Transactions on Geoscience and Remote Sensing</i>, 54 (1), 167-175, 2016.
