--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <div class="publication pub-collapsed">
                 <div class="pubwrap">
                     <img width=300px src="im/scientificreports2018.png"/>
-                    <div><h3> Sub-Picosecond Photon-Efficient 3D Imaging Using Single-Photon Sensors</h3></div>
+                    <div><h3> Sub-Picosecond Photon-Efficient 3D Imaging</br>Using Single-Photon Sensors</h3></div>
                     <div><h3 class="unbold"> Scientific Reports 2018 </h3></div>
                     <h4>Citation</h4>
                     <p style='display:block; font-size:1.0em'>
@@ -376,7 +376,7 @@
             <div class="publication pub-collapsed">
                 <div class="pubwrap">
                     <img width=300px src="im/iccp_2018.png"/>
-                    <div><h3>Towards Transient Imaging at Interactive Rates with Single-Photon Detectors </h3></div>
+                    <div><h3>Towards Transient Imaging at Interactive Rates</br>with Single-Photon Detectors </h3></div>
                     <div><h3 class="unbold"> ICCP 2018 </h3></div>
                     <h4>Citation</h4>
                     <p style='font-size:1.0em'>
