--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <div class="row">
                 <div class="col-md-11" style='font-size:1.5em'>
-			I'm a fourth-year Ph.D. student at Stanford University. I completed my B.S. and M.S. degrees in Electrical Engineering at Brigham Young University and am interested in problems in 3D imaging, optimization, computer vision, and remote sensing. I'm currently working in <a href="http://www.computationalimaging.org/"> Stanford's Computational Imaging Lab </a> on computational LIDAR systems, <a href="https://www.youtube.com/watch?v=KnGQEzB9u_0"> imaging around corners</a>, and sensor fusion. <strong></strong>
+			I'm a fourth-year Ph.D. student at Stanford University. I'm interested in problems in 3D imaging, optimization, computer vision, and remote sensing. My current work in <a href="http://www.computationalimaging.org/"> Stanford's Computational Imaging Lab </a> involves computational LIDAR systems, <a href="https://www.youtube.com/watch?v=KnGQEzB9u_0"> imaging around corners</a>, and sensor fusion. <strong></strong>
                 </div>  
             </div>
 
