--- a/index.html
+++ b/index.html
@@ -649,6 +649,96 @@
                 <tr>
                     <td class="col-md-4"> 
                         <div style='font-size:1.5em'>
+                            <strong> TEDxBeaconStreet 2019 </strong>
+                        </div>
+                    </td>
+                    <td  class="col-md-4">
+                        <div style="font-size:1.5em;"> 
+                            <i>How future cars will see around corners</i>
+                        </div>
+                    </td>
+                    <td class="col-md-2">
+                        <div style="font-size: 1.5em;"> 
+                        11/23/2019
+                        </div>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="col-md-4"> 
+                        <div style='font-size:1.5em'>
+                            <strong> Boston University Center for Information & Systems Engineering </strong>
+                        </div>
+                    </td>
+                    <td  class="col-md-4">
+                        <div style="font-size:1.5em;"> 
+                            <i>Computational Imaging with Single-Photon Detectors</i>
+                        </div>
+                    </td>
+                    <td class="col-md-2">
+                        <div style="font-size: 1.5em;"> 
+                        11/22/2019
+                        </div>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="col-md-4"> 
+                        <div style='font-size:1.5em'>
+                            <strong> MIT Research Laboratory of Electronics </strong>
+                        </div>
+                    </td>
+                    <td  class="col-md-4">
+                        <div style="font-size:1.5em;"> 
+                            <i>Efficient Confocal Non-Line-of-Sight Imaging</i>
+                        </div>
+                    </td>
+                    <td class="col-md-2">
+                        <div style="font-size: 1.5em;"> 
+                        11/21/2019
+                        </div>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="col-md-4"> 
+                        <div style='font-size:1.5em'>
+                            <strong> Berkeley Center for Computational Imaging </strong>
+                        </div>
+                    </td>
+                    <td  class="col-md-4">
+                        <div style="font-size:1.5em;"> 
+                            <i>Computational Imaging with Single-Photon Detectors</i>
+                        </div>
+                    </td>
+                    <td class="col-md-2">
+                        <div style="font-size: 1.5em;"> 
+                        9/4/2019
+                        </div>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="col-md-4"> 
+                        <div style='font-size:1.5em'>
+                            <strong> Silicon Valley ACM SIGGRAPH Chapter </strong>
+                        </div>
+                    </td>
+                    <td  class="col-md-4">
+                        <div style="font-size:1.5em;"> 
+                            <i>Computational Single-Photon Imaging</i>
+                        </div>
+                    </td>
+                    <td class="col-md-2">
+                        <div style="font-size: 1.5em;"> 
+                        5/30/2019
+                        </div>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="col-md-4"> 
+                        <div style='font-size:1.5em'>
                             <strong> Stanford Center for Image Systems Engineering </strong>
                         </div>
                     </td>
@@ -677,23 +767,6 @@
                     <td class="col-md-2">
                         <div style="font-size: 1.5em;"> 
                         1/23/2019
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="col-md-4"> 
-                        <div style='font-size:1.5em'>
-                            <strong> Silicon Valley ACM SIGGRAPH Chapter </strong>
-                        </div>
-                    </td>
-                    <td  class="col-md-4">
-                        <div style="font-size:1.5em;"> 
-                            <i>Computational Single-Photon Imaging</i>
-                        </div>
-                    </td>
-                    <td class="col-md-2">
-                        <div style="font-size: 1.5em;"> 
-                        5/30/2019
                         </div>
                     </td>
                 </tr>
