--- a/index.html
+++ b/index.html
@@ -114,6 +114,20 @@
                 <tr>
                     <td  class="col-md-4">
                         <div style="font-size:1.5em;"> 
+                           Jan 2020
+                        </div>
+                    </td>
+                    <td class="col-md-7">
+                        <div style="font-size:1.5em;">
+				My <a href="https://www.youtube.com/watch?v=ytxZc1WBtjI">TEDx talk</a> on "a camera to see around corners" is up on YouTube!
+			</div>
+                    </td>
+                </tr>
+
+
+                <tr>
+                    <td  class="col-md-4">
+                        <div style="font-size:1.5em;"> 
                            May 2019 
                         </div>
                     </td>
