--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <div class="row">
                 <div class="col-md-11" style='font-size:1.5em'>
-			I'm a fourth-year Ph.D. student at Stanford University. I'm interested in problems in 3D imaging, optimization, computer vision, and remote sensing, and my current work in <a href="http://www.computationalimaging.org/"> Stanford's Computational Imaging Lab </a> involves computational LIDAR systems, <a href="https://www.youtube.com/watch?v=KnGQEzB9u_0"> imaging around corners</a>, and sensor fusion. <strong></strong>
+			I'm a fourth-year Ph.D. student at Stanford University in the <a href="http://www.computationalimaging.org/">Computational Imaging Lab </a>. My work is at the intersection of optimization, machine learning, optics, and hardware. Along these lines I've been developing next-generation computational LIDAR systems and algorithms for <a href="https://www.youtube.com/watch?v=KnGQEzB9u_0"> imaging around corners</a>. I'm generally interested in problems in 3D imaging, inverse scattering, optimization, and computer vision, with a goal of developing computational methods to push the boundaries of current imaging capabilities. My work is relevant to a broad range of applications including autonomous vehicle navigation, medical imaging, remote sensing, and robotic vision. 
                 </div>  
             </div>
 
