--- a/index.html
+++ b/index.html
@@ -119,8 +119,14 @@
                     </td>
                     <td class="col-md-7">
                         <div style="font-size:1.5em;">
-				My <a href="https://www.youtube.com/watch?v=ytxZc1WBtjI">TEDx talk</a> on "a camera to see around corners" is up on YouTube!
-			</div>
+                         <a href="https://www.youtube.com/watch?v=ytxZc1WBtjI">
+                            <img src="im/tedx.jpg"
+                            width="400" style="border-radius: 10px; margin: 10px; max-width: none; margin-left: 0px; margin-top: 0px"
+                            alt="David Lindell"/>
+                        </a>
+                        <br> 
+                        My <a href="https://www.youtube.com/watch?v=ytxZc1WBtjI">TEDxBeaconStreet talk</a> on "a camera to see around corners" is up on YouTube! 
+			           </div>
                     </td>
                 </tr>
 
