--- a/index.html
+++ b/index.html
@@ -114,6 +114,19 @@
                 <tr>
                     <td  class="col-md-4">
                         <div style="font-size:1.5em;"> 
+                           Mar 2020
+                        </div>
+                    </td>
+                    <td class="col-md-7">
+                        <div style="font-size:1.5em;">
+                            Update: My <a href="https://go.ted.com/davidlindell">talk</a> is featured on the <a href="https://www.ted.com/">TED homepage</a>!
+			           </div>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td  class="col-md-4">
+                        <div style="font-size:1.5em;"> 
                            Jan 2020
                         </div>
                     </td>
