update url for siggraph tff

--- a/siggraph-tff/index.html
+++ b/siggraph-tff/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="2; url='https://www.youtube.com/watch?v=NpEaa2P7qZI'" />
+    <meta http-equiv="refresh" content="2; url='https://www.youtube.com/watch?v=ubfDfr6lwdc'" />
   </head>
   <body>
-    <p>You are being redirected to a placeholder video (link to correct video will be updated soon).</p>
+	  <p>You are being redirected to the thesis fast forward video. Click <a href="https://www.youtube.com/watch?v=ubfDfr6lwdc">here</a> to be go there now.</p>
   </body>
 </html>
